--- a/sun_tactile_driver/package.xml
+++ b/sun_tactile_driver/package.xml
@@ -52,6 +52,7 @@
 
   <build_depend>sun_tactile_common</build_depend>
   <build_depend>serial</build_depend>
+  <build_depend>sun_systems_lib</build_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
