combine_wrench_node

--- a/sun_tactile_driver/CMakeLists.txt
+++ b/sun_tactile_driver/CMakeLists.txt
@@ -228,3 +228,12 @@ target_link_libraries(read_wrench
   ${catkin_LIBRARIES}
 )
 #########################################
+#########################################
+add_executable(combine_wrench
+  src/combine_wrench_node.cpp
+)
+add_dependencies(combine_wrench ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(combine_wrench
+  ${catkin_LIBRARIES}
+)
+#########################################
