--- a/sun_tactile_common/package.xml
+++ b/sun_tactile_common/package.xml
@@ -52,6 +52,7 @@
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
   <depend>std_msgs</depend>
+  <depend>actionlib_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
